# mewo

./: CMakeLists.txt
include/: frames.h  mewo.h
scripts/: bitmap_to_c.py
src/: frames.c  mewo.c
test/: anim_validation.c  frame_validation.c
